--- a/app.json
+++ b/app.json
@@ -31,7 +31,7 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.anonymous.AppMasssage"
+      "package": "AppMasssage"
     },
     "web": {
       "favicon": "./assets/favicon.png"
