--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -119,9 +119,9 @@ android {
     }
     signingConfigs {
         release {
-            storeFile file('new-upload-key.jks')
+            storeFile file('app-release-key.keystore')
             storePassword 'chema-11'
-            keyAlias 'upload'
+            keyAlias 'androiddebugkey'
             keyPassword 'chema-11'
         }
         debug {
