Subiendo CcalmSPA a playstoreGoD

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -109,9 +109,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.example.ccalmspa'
+    namespace 'com.ccalm.spa'
     defaultConfig {
-        applicationId 'com.example.ccalmspa'
+        applicationId 'com.ccalm.spa'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 2
